fix: prevent mobile canvas overflow

--- a/src/components/GarbageCollector/GarbageCollector.module.css
+++ b/src/components/GarbageCollector/GarbageCollector.module.css
@@ -1,15 +1,20 @@
 .system {
   position: relative;
+  min-width: 0;
   width: 100%;
+  max-width: 100%;
   height: 190px;
   overflow: hidden;
+  contain: inline-size paint;
   border-block: 1px solid rgb(229 231 235);
   background: rgb(255 255 255);
 }
 
 .canvas {
   display: block;
+  min-width: 0;
   width: 100%;
+  max-width: 100%;
   height: 190px;
   cursor: crosshair;
   outline: none;
